Bug 389326 - lambda function crashes background parser
Summary: lambda function crashes background parser
Status: RESOLVED FIXED
Alias: None
Product: kdev-python
Classification: Developer tools
Component: general (other bugs)
Version First Reported In: 5.2.1
Platform: Debian stable Linux
: HI crash
Target Milestone: ---
Assignee: Sven Brauch
URL:
Keywords:
: 408965 (view as bug list)
Depends on:
Blocks:
 
Reported: 2018-01-22 19:59 UTC by Brian DeRocher
Modified: 2021-10-05 14:23 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Brian DeRocher 2018-01-22 19:59:27 UTC
mkdir ve
virtualenv ve
cd ve
pip install pylint

Create a new project in KDevelop and watch it crash.

The root cause is in ve/lib/python2.7/site-packages/pylint/test/functional/inherit_non_class.py, line 24

class Bad1(lambda abc: 42): # [inherit-non-class]
    """ Can't inherit from lambda. """
Comment 1 Francis Herne 2018-01-25 00:15:40 UTC
Ouch. Reproducible with 5.2-git.
Comment 2 Francis Herne 2018-01-25 12:45:53 UTC
Git commit ec8c1c43e3803a39c1d1f72045ad800b50d3e98c by Francis Herne.
Committed on 25/01/2018 at 12:22.
Pushed by flherne into branch '5.2'.

Fix crash with contexts opened in the baseclass list of a class definition.

The baseclass list wasn't visited by the DeclarationBuilder, so
 currentContext wasn't set on those nodes. This caused a crash in case
 of child statements opening a new context such as lambda definitions.

This makes little sense and is unlikely to occur in real code; the bug report
 is from trying to parse a negative example in a test suite.

M  +1    -0    duchain/declarationbuilder.cpp
M  +2    -0    duchain/tests/pyduchaintest.cpp

https://commits.kde.org/kdev-python/ec8c1c43e3803a39c1d1f72045ad800b50d3e98c
Comment 3 Francis Herne 2021-10-05 14:23:02 UTC
*** Bug 408965 has been marked as a duplicate of this bug. ***