Fix crash with contexts opened in the baseclass list of a class definition.

The baseclass list wasn't visited by the DeclarationBuilder, so
 currentContext wasn't set on those nodes. This caused a crash in case
 of child statements opening a new context such as lambda definitions.

This makes little sense and is unlikely to occur in real code; the bug report
 is from trying to parse a negative example in a test suite.

BUG: 389326